# mixpairs

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_iris.py  02_mixed_types.py  03_custom_renderers.py  04_corner_mode.py  05_large_grid.py  06_geospatial_features.py
mixpairs/: __init__.py  _registry.py  config.py  core.py  dispatch.py  layout.py  renderers.py  utils.py
tests/: test_config.py  test_dispatch.py  test_integration.py  test_layout.py  test_registry.py  test_renderers.py  test_utils.py
