[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixpairs"
version = "0.1.3"
description = "Mixed-type generalized pair plots for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Paul Christian Hosch", email = "paul.hosch@rwth-aachen.de" }]
keywords = ["pairplot", "visualization", "seaborn", "matplotlib", "geospatial", "data-science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/paulhosch/mixpairs"
Repository = "https://github.com/paulhosch/mixpairs"
Issues = "https://github.com/paulhosch/mixpairs/issues"

[project.optional-dependencies]
dev = ["pytest", "pygments<2.20"]

[tool.setuptools]
packages = ["mixpairs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
